# volleyball_research

./: .gitignore  README.md  ball_track.py  court_line.py  eigenvalue.py  lucaskanz.py  missing_piece.py  motion_detection.py
castles/: BallCandidateProducing.cpp  CMakeCache.txt  CMakeLists.txt  DominantColor.cpp  DominantColor.h  DrawDebug.cpp  LineComparator.cpp  LineDetection.cpp  LineDetection.h  Makefile  PixelDetection.cpp  PixelDetection.h  Plotter.cpp  Plotter.h  VolleyballCourtFitter.cpp  VolleyballCourtFitter.h  VolleyballCourtModel.cpp  castles  castles.cbp  cmake_install.cmake  court_line.cpp  cpp_court_line  cpp_court_line.cbp  main.cpp
cpp_court_line/: BallCandidateProducing.cpp  BallCandidateProducing.h  CMakeCache.txt  CMakeLists.txt  DrawDebug.cpp  DrawDebug.h  InitialBallTrack.cpp  InitialBallTrack.h  Line.cpp  Line.h  LineDetection.cpp  LineDetection.h  Makefile  PixelDetection.cpp  PixelDetection.h  VolleyballCourtModel.cpp  VolleyballCourtModel.h  a.out  cmake_install.cmake  court_line.cpp  cpp_court_line.cbp  finalPoints.txt  main.cpp
